# TuneTracker

./: Cargo.toml  README.md
src/: main.rs
src/services/: mod.rs  spotify.rs  subsonic.rs
