[package]
name = "TuneTracker"
description = "A simple tool that imports spotify playlists into subsonic music servers."
repository = "https://github.com/Funtimes909/TuneTracker"
readme = "README.md"
license = "GNU General Public License v3.0"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
rspotify = { version = "0.15.3", features = ["cli"] }
rspotify-model = "0.15.3"
submarine = "0.1.1"
tokio = { version = "1.49.0", features = ["full"] }
