[package]
exclude = [
    "images/*"
]

name = "TuneTracker"
description = "A simple tool that imports spotify playlists into subsonic music servers."
repository = "https://github.com/Funtimes909/TuneTracker"
readme = "README.md"
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
rspotify = { version = "0.15.3", features = ["cli"] }
rspotify-model = "0.15.3"
submarine = { git = "https://github.com/eppixx/submarine/", version = "0.1.1", features = ["navidrome"] }
tokio = { version = "1.49.0", features = ["full"] }
